# vqe-quantum-simulation

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
notebooks/: 00_analysis.ipynb  00_cache_fci.ipynb  00_fci_cache_baseline.ipynb  01_fourier_analysis.ipynb  01_h2_experiment.ipynb  01_h2_experiment_tests.ipynb  02_fourier_tradeoff_article_plan.ipynb  02_lih_experiment.ipynb  03_analysis.ipynb  03_li2o_experiment.ipynb  quantum_begings.ipynb
notes/: concepts-template.md.md  fourier-qth-chemistry.aux  fourier-qth-chemistry.fdb_latexmk  fourier-qth-chemistry.fls  fourier-qth-chemistry.out  fourier-qth-chemistry.tex  gpt-code-example.py  hamiltonian.md  qth-chemistry-fourier-experimental-v2.aux  qth-chemistry-fourier-experimental-v2.fdb_latexmk  qth-chemistry-fourier-experimental-v2.fls  qth-chemistry-fourier-experimental-v2.out  qth-chemistry-fourier-experimental-v2.tex  qth-chemistry-fourier-experimental-v2.toc  qth-chemistry-fourier-experimental.aux  qth-chemistry-fourier-experimental.bbl  qth-chemistry-fourier-experimental.blg  qth-chemistry-fourier-experimental.fdb_latexmk  qth-chemistry-fourier-experimental.fls  qth-chemistry-fourier-experimental.out  qth-chemistry-fourier-experimental.tex  qth-chemistry-fourier-experimental.toc  qth-chemistry-vqe-notes.aux  qth-chemistry-vqe-notes.bbl  qth-chemistry-vqe-notes.blg  qth-chemistry-vqe-notes.fdb_latexmk  qth-chemistry-vqe-notes.fls  qth-chemistry-vqe-notes.out  qth-chemistry-vqe-notes.tex  qth-chemistry-vqe-notes.toc  qth-chemistry-vqe.bib  slaters-determinants.md
src/: ansatz.py  pipeline.py  (+5 more)
(+131 files in other folders)
